styles.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap");

html {
    font-size: calc(1em);
    font-family: "Inter", sans-serif;
    background-color: #4865ff;
    background-image: linear-gradient(
      45deg,
      hsl(240deg 100% 20%) 0%,
      hsl(289deg 100% 21%) 11%,
      hsl(315deg 100% 27%) 22%,
      hsl(329deg 100% 36%) 33%,
      hsl(337deg 100% 43%) 44%,
      hsl(357deg 91% 59%) 56%,
      hsl(17deg 100% 59%) 67%,
      hsl(34deg 100% 53%) 78%,
      hsl(45deg 100% 50%) 89%,
      hsl(55deg 100% 50%) 100%
    );
    background-attachment: fixed;
    background-size: contain;
    overflow: hidden;
  }

body {
  margin: 0;
  overflow: hidden;
}

ul {
  padding: 0;
  margin: 0;
}

li {
  background: #4865ff;
  background: -webkit-linear-gradient(90deg, #4865ff 0%, #51ff47 100%);
  background: linear-gradient(90deg, #4865ff 0%, #51ff47 100%);
  padding: 10px;
  color: white;
  width: fit-content;
  list-style-type: none;
  margin: 10px;
  border-radius: 15px;
  max-width: 30ch;
  word-wrap: break-word;
}

form {
  position: fixed;
  display: flex;
  align-content: center;
  justify-content: center;
  bottom: 0;
  width: 100vw;
  height: calc(50px);
}

input {
  flex-grow: 1;
}

button {
    box-sizing: content-box;
    width: 10%;
    padding: 15px 32px;
    display: inline-block;
    text-align: center;
}


#messages {
    height: calc(100vh - 50px);
    overflow-y: scroll;
    overflow-x: hidden;
}

